# musical-bingo-maker

./: README.md  add_text_to_image.py  create_pdf_with_images.py  musical-bingo-maker.py  pdf_bingo_maker.py  pyproject.toml  requirements.txt  setup.bat  setup.sh
